add router get problem randomly
